make scripts executable after build

--- a/neurodocker/templates/ants.yaml
+++ b/neurodocker/templates/ants.yaml
@@ -100,3 +100,4 @@ source:
           mv ../Scripts/* {{ self.install_path }} ; \
         fi
         rm -rf /tmp/ants
+        chmod a+rx {{ self.install_path }} -R
