Making gentoo template/invocation work (more TODOs)
We did not figure out good way to do all of that like reacting
to specific date. Might need some dedicated handling or option like ndfreeze.

Also to figure out how to make it work without specifyin any optional argument

--- a/neurodocker/templates/gentoo.yaml
+++ b/neurodocker/templates/gentoo.yaml
@@ -13,42 +13,53 @@ binaries:
         optional:
             gentoo_hash: "2d25617a1d085316761b06c17a93ec972f172fc6"
             science_hash: "73916dd3680ffd92e5bd3d32b262e5d78c86a448"
+    # Below echo commands will be indented by _indent_run_instruction which
+    # would cause trailing spaces to be added to the files. But it should be ok
+    # for us, thus we are not bothering to workaround via inlining.
     instructions: |
-        COPY --from=portage /var/db/repos/gentoo /var/db/repos/gentoo
-        RUN emerge -v --noreplace dev-vcs/git
-        RUN emerge -v1u portage
-        # Pinned commits for the dependency tree state
-        ARG gentoo_hash={{ self.gentoo_hash }}
-        ARG science_hash={{ self.science_hash }}
-        ARG FEATURES="-ipc-sandbox -network-sandbox -pid-sandbox"
-        # This will be bound, and contents available outside of container
-        RUN mkdir /outputs
-        COPY gentoo-portage/ /etc/portage/
-        # Moving gentoo repo from default rsync to git
-        RUN rm /var/db/repos/gentoo -rf
-        # Cloning manually to prevent vdb update, pinning state via git
-        # Allegedly it's better to chain everything in one command, something with container layers 🤔
-        RUN \
-                REPO_URL=$(grep "^sync-uri" /etc/portage/repos.conf/gentoo | sed -e "s/sync-uri *= *//g") && \
-                mkdir -p /var/db/repos/gentoo && pushd /var/db/repos/gentoo && git init . && \
-                        git remote add origin ${REPO_URL} && \
-                        git fetch --filter="blob:none" origin $gentoo_hash && \
-                        git reset --hard $gentoo_hash && rm .git -rf && popd && \
-                REPO_URL=$(grep "^sync-uri" /etc/portage/repos.conf/science | sed -e "s/sync-uri *= *//g") && \
-                mkdir -p /var/db/repos/science && pushd /var/db/repos/science && git init . && \
-                        git remote add origin ${REPO_URL} && \
-                        git fetch --filter="blob:none" origin $science_hash && \
-                        git reset --hard $science_hash && rm .git -rf && popd
-        # Old Christian: Remove sync-uri to not accidentally re-sync if we work with the package management interactively
-        # Christian from the future: Maybe we want the option to re-sync if we're debugging it interactively...
-        #RUN sed -i /etc/portage/repos.conf/{gentoo,science} -e "s/sync-type *= *git/sync-type =/g"
-        #RUN sed -i /etc/portage/repos.conf/{gentoo,science} -e "/sync-uri/d"
-        #RUN sed -i /etc/portage/repos.conf/{gentoo,science} -e "/sync-git-verify-commit-signature/d"
-        # Make sure all CPU flags supported by the hardware are whitelisted
-        # This only affects packages with handwritten assembly language optimizations, e.g. ffmpeg.
-        # Removing it is safe, software will just not take full advantage of processor capabilities.
-        #RUN emerge cpuid2cpuflags
-        #RUN echo "*/* $(cpuid2cpuflags)" > /etc/portage/package.use/00cpu-flags
-        ### Emerge cool stuff here
-        ### Autounmask-continue enables all features on dependencies which the top level packages require
-        ### By default this needs user confirmation which would interrupt the build.
+        mkdir -p /etc/portage/; \
+        echo -e "\
+        \nCOMMON_FLAGS=\"-O2 -pipe -march=native\" \
+        \nMAKEOPTS=\"--jobs 8 --load-average 9\" \
+        \nCFLAGS=\"\${COMMON_FLAGS}\" \
+        \nCXXFLAGS=\"\${COMMON_FLAGS}\" \
+        \nFCFLAGS=\"\${COMMON_FLAGS}\" \
+        \nFFLAGS=\"\${COMMON_FLAGS}\" \
+        \nLC_MESSAGES=C \
+        \nUSE=\"\${USE} science\" \
+        \nACCEPT_LICENSE=\"*\" \
+        "  > "/etc/portage/make.conf"; \
+        mkdir -p "/etc/portage/package.accept_keywords"; \
+        echo -e "*/* ~amd64"  > "/etc/portage/package.accept_keywords/gen" ; \
+        mkdir -p "/etc/portage/package.mask"; \
+        touch "/etc/portage/package.mask/bugs"; \
+        mkdir -p "/etc/portage/repos.conf" ; \
+        echo -e "[gentoo] \
+        \nlocation = /var/db/repos/gentoo \
+        \nsync-type = git \
+        \nsync-uri = https://anongit.gentoo.org/git/repo/gentoo.git \
+        \nsync-git-verify-commit-signature = yes"  > "/etc/portage/repos.conf/gentoo"; \
+        echo -e "[science] \
+        \nlocation = /var/db/repos/science \
+        \nsync-type = git \
+        \nsync-uri = https://anongit.gentoo.org/git/proj/sci.git \
+        \npriority = 7777"  > "/etc/portage/repos.conf/science"; \
+        emerge -v --noreplace dev-vcs/git \
+        && emerge -v1u portage \
+        && mkdir /outputs \
+        && rm /var/db/repos/gentoo -rf \
+        && git config --global init.defaultBranch master \
+        && \
+               set -x && export GIT_TRACE=1 && \
+               REPO_URL=$(grep "^sync-uri" /etc/portage/repos.conf/gentoo | sed -e "s/sync-uri *= *//g") && \
+               git clone --depth 1 ${REPO_URL} /var/db/repos/gentoo && \
+               cd /var/db/repos/gentoo && \
+                       git fetch --depth 1 origin {{ self.gentoo_hash }} && \
+                       git reset --hard {{ self.gentoo_hash }} && \
+               rm .git -rf && \
+               REPO_URL=$(grep "^sync-uri" /etc/portage/repos.conf/science | sed -e "s/sync-uri *= *//g") && \
+               git clone --depth 1 ${REPO_URL} /var/db/repos/science && \
+               cd /var/db/repos/science && \
+                       git fetch --depth 1 origin {{ self.science_hash }} && \
+                       git reset --hard {{ self.science_hash }} && \
+               rm .git -rf
