--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,6 +55,6 @@ repos:
     rev: v1.11.1
     hooks:
     -   id: mypy
-        additional_dependencies: [types-all]
+        additional_dependencies: [types-PyYAML, types-Jinja2, types-click]
         files: neurodocker
         args: [--config-file, pyproject.toml, --install-types]
