--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,6 +36,7 @@ jobs:
             uses: actions/setup-python@v5
             with:
                 python-version: ${{ matrix.python-version }}
+                allow-prereleases: true
         -   name: Install neurodocker
             run: python -m pip install --editable .[dev]
         -   name: Run python tests
