--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,7 +14,7 @@ jobs:
         runs-on: ubuntu-22.04
         strategy:
             matrix:
-                python-version: ['3.12', '3.11', '3.10', '3.9', '3.8']
+                python-version: ['3.13', '3.12', '3.11', '3.10', '3.9']
             fail-fast: false
         steps:
         -   name: Install Apptainer
@@ -36,6 +36,7 @@ jobs:
             uses: actions/setup-python@v5
             with:
                 python-version: ${{ matrix.python-version }}
+                allow-prereleases: true
         -   name: Install neurodocker
             run: python -m pip install --editable .[dev]
         -   name: Run python tests
