--- a/.github/workflows/type_checks.yml
+++ b/.github/workflows/type_checks.yml
@@ -19,7 +19,7 @@ jobs:
 
         strategy:
             matrix:
-                python-version: ['3.12', '3.11', '3.10', '3.9', '3.8']
+                python-version: ['3.13', '3.12', '3.11', '3.10', '3.9']
 
         steps:
         -   uses: actions/checkout@v4
@@ -28,6 +28,7 @@ jobs:
             uses: actions/setup-python@v5
             with:
                 python-version: ${{ matrix.python-version }}
+                allow-prereleases: true
 
         -   name: Install neurodocker
             run: python -m pip install . mypy
