ref: use org secret and bump base images and toolkits (#651)
* ref: use org secret

* update to non-EOL base images

* fix: use miniforge since mambaforge is deprecated

* update base test images

* Changed mirror link to http://vault.centos.org to retrieve yum packages. Removed curl and localedef in dependencies. Fix #653

* replace more occurances

* fix more fedora references

* fix: update jq source links

* update localdef packages

* update jq versions

* remove jq 1.5 references

* add default to test template path

* fix jq builds

* fix: adjust config for different versions of jq

* fix: adjust config for jq 1.6

* updating apptainer version and some tests

* use apptainer when set for tests

* build without sudo

* try if a different version works

* remove default and add yum config

---------

Co-authored-by: iishiishii <love_sweet_98@yahoo.com.vn>

--- a/neurodocker/cli/tests/sample-template-jq.yaml
+++ b/neurodocker/cli/tests/sample-template-jq.yaml
@@ -17,12 +17,17 @@ binaries:
         ND_BAZ: '1234'
         ND_FOO: BAR
     instructions: |
+        export DUMMY="dummy"
+        {%- if self.pkg_manager == "yum" %}
+        sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+        sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+        {%- endif %}
         {{ self.install_dependencies() }}
         curl -fsSL --output /usr/local/bin/jq {{ self.urls[self.version]}}
         chmod +x /usr/local/bin/jq
     urls:
-        '1.5': https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64
-        '1.6': https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
+        '1.6': https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
+        '1.7': https://github.com/jqlang/jq/releases/download/jq-1.7/jq-linux64
 source:
     arguments:
         required:
@@ -48,13 +53,21 @@ source:
         ND_BAZ: '1234'
         ND_FOO: BAR
     instructions: |
+        export DUMMY="dummy"
+        {%- if self.pkg_manager == "yum" %}
+        sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+        sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+        {%- endif %}
         {{ self.install_dependencies() }}
         mkdir jq
         cd jq
-        curl -fsSL https://github.com/stedolan/jq/releases/download/jq-{{self.version}}/jq-{{self.version}}.tar.gz \
+        curl -fsSL https://github.com/jqlang/jq/releases/download/jq-{{self.version}}/jq-{{self.version}}.tar.gz \
         | tar xz --strip-components 1
-        # Only required in version 1.6
-        autoreconf -fi
-        ./configure --disable-maintainer-mode
+        {%- if self.version == '1.6' %}
+            autoreconf -i
+            ./configure --with-oniguruma=builtin --disable-maintainer-mode
+        {%- else %}
+            ./configure --with-oniguruma=builtin
+        {%- endif %}
         make
         make install
