--- a/neurodocker/templates/jq.yaml
+++ b/neurodocker/templates/jq.yaml
@@ -18,8 +18,9 @@ binaries:
         curl -fsSL --output /usr/local/bin/jq {{ self.urls[self.version]}}
         chmod +x /usr/local/bin/jq
     urls:
-        '1.6': https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
-        '1.5': https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64
+        1.7.1: https://github.com/jqlang/jq/releases/download/jq-1.7.1/jq-linux64
+        '1.7': https://github.com/jqlang/jq/releases/download/jq-1.7/jq-linux64
+        '1.6': https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64
 source:
     arguments:
         required:
@@ -44,9 +45,13 @@ source:
     instructions: |
         mkdir jq
         cd jq
-        curl -fsSL https://github.com/stedolan/jq/releases/download/jq-{{self.version}}/jq-{{self.version}}.tar.gz \
+        curl -fsSL https://github.com/jqlang/jq/releases/download/jq-{{self.version}}/jq-{{self.version}}.tar.gz \
         | tar xz --strip-components 1
-        {% if self.version == "1.6" -%} autoreconf -fi {% endif %}
-        ./configure --disable-maintainer-mode
+        {%- if self.version == '1.6' %}
+            autoreconf -i
+            ./configure --with-oniguruma=builtin --disable-maintainer-mode
+        {%- else %}
+            ./configure --with-oniguruma=builtin
+        {%- endif %}
         make
         make install
