--- a/neurodocker/templates/_default.yaml
+++ b/neurodocker/templates/_default.yaml
@@ -30,10 +30,9 @@ source:
     instructions: |
         export ND_ENTRYPOINT="{{ self.env['ND_ENTRYPOINT'] }}"
         {%- if self.pkg_manager == "yum" %}
-        if ls /etc/yum.repos.d/CentOS-* >/dev/null 2>&1; then
-            # Disable mirrorlist and switch to vault.centos.org
-            sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
-            sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+        if ls /etc/yum.repos.d/CentOS-* >/dev/null 2>&1; then \
+            sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* \
+            sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-* \
         fi
         {%- endif %}
         {{ self.install_dependencies() }}
@@ -46,10 +45,10 @@ source:
         {%- endif %}
         chmod 777 /opt && chmod a+s /opt
         mkdir -p /neurodocker
-        if [ ! -f "$ND_ENTRYPOINT" ]; then
-          echo '#!/usr/bin/env bash' >> "$ND_ENTRYPOINT"
-          echo 'set -e' >> "$ND_ENTRYPOINT"
-          echo 'export USER="${USER:=`whoami`}"' >> "$ND_ENTRYPOINT"
-          echo 'if [ -n "$1" ]; then "$@"; else /usr/bin/env bash; fi' >> "$ND_ENTRYPOINT";
+        if [ ! -f "$ND_ENTRYPOINT" ]; then \
+          echo '#!/usr/bin/env bash' >> "$ND_ENTRYPOINT" \
+          echo 'set -e' >> "$ND_ENTRYPOINT" \
+          echo 'export USER="${USER:=`whoami`}"' >> "$ND_ENTRYPOINT" \
+          echo 'if [ -n "$1" ]; then "$@"; else /usr/bin/env bash; fi' >> "$ND_ENTRYPOINT"; \
         fi
         chmod -R 777 /neurodocker && chmod a+s /neurodocker
