--- a/neurodocker/cli/tests/sample-template-jq.yaml
+++ b/neurodocker/cli/tests/sample-template-jq.yaml
@@ -17,10 +17,12 @@ binaries:
         ND_BAZ: '1234'
         ND_FOO: BAR
     instructions: |
-        export DUMMY="dummy"
+        echo "Installing from binaries"
         {%- if self.pkg_manager == "yum" %}
-        sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
-        sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+        if ls /etc/yum.repos.d/CentOS-* >/dev/null 2>&1; then
+            sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+            sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*;
+        fi
         {%- endif %}
         {{ self.install_dependencies() }}
         curl -fsSL --output /usr/local/bin/jq {{ self.urls[self.version]}}
@@ -53,10 +55,12 @@ source:
         ND_BAZ: '1234'
         ND_FOO: BAR
     instructions: |
-        export DUMMY="dummy"
+        echo "Building from source"
         {%- if self.pkg_manager == "yum" %}
-        sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
-        sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+        if ls /etc/yum.repos.d/CentOS-* >/dev/null 2>&1; then
+            sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+            sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*;
+        fi
         {%- endif %}
         {{ self.install_dependencies() }}
         mkdir jq
