--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
         -   master
 
 env:
-    AUTO_VERSION: v11.1.6
+    AUTO_VERSION: v11.3.0
 
 jobs:
     auto-release:
@@ -29,7 +29,7 @@ jobs:
         -   name: Set up Python
             uses: actions/setup-python@v5
             with:
-                python-version: '3.10'
+                python-version: '3.11'
 
         -   name: Download auto
             run: |
@@ -41,4 +41,4 @@ jobs:
             run: |
                 ~/auto shipit -vv
             env:
-                GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                GH_TOKEN: ${{ secrets.AUTO_TOKEN }}
