--- a/neurodocker/templates/ants.yaml
+++ b/neurodocker/templates/ants.yaml
@@ -47,7 +47,7 @@ binaries:
     instructions: |
         {{ self.install_dependencies() }}
         echo "Downloading ANTs ..."
-        {% if (self.version == "2.4.1" or self.version == "2.4.2" or self.version == "2.4.3" or self.version == "2.4.4" or self.version == "2.5.0" or self.version == "2.5.1" or self.version == "2.5.2" or self.version == "2.5.3" or self.version == "2.5.4" or self.version == "2.6.0" or self.version == "2.6.1" or self.version == "2.6.2") -%}
+        {% if self.urls[self.version].endswith('.zip') -%}
         curl -fsSL -o ants.zip {{ self.urls[self.version] }}
         unzip ants.zip -d /opt
         mv {{ self.install_path }}/bin/* {{ self.install_path }}
