Add 'arch' optional arg to miniconda template (#686)
* added 'arch' optional arg to miniconda template to enable the specification of non x86 binaries

* fixing up type annotations for mypy

* ignoring mypy errors in private click parser

* formatting changes for precommit compliance

* Removed vscode settings and added .vscode to .gitignore

--- a/neurodocker/templates/miniconda.yaml
+++ b/neurodocker/templates/miniconda.yaml
@@ -5,8 +5,8 @@ name: miniconda
 url: https://docs.conda.io/projects/miniconda/en/latest/
 binaries:
     urls:
-        latest: https://repo.continuum.io/miniconda/Miniconda3-{{ self.version }}-Linux-x86_64.sh
-        '*': https://repo.continuum.io/miniconda/Miniconda3-{{ self.version }}-Linux-x86_64.sh
+        latest: https://repo.continuum.io/miniconda/Miniconda3-{{ self.version }}-Linux-{{ self.arch }}.sh
+        '*': https://repo.continuum.io/miniconda/Miniconda3-{{ self.version }}-Linux-{{ self.arch }}.sh
     env:
         CONDA_DIR: '{{ self.install_path }}'
         PATH: '{{ self.install_path }}/bin:$PATH'
@@ -34,6 +34,7 @@ binaries:
             pip_opts: ''
             yaml_file: ''
             mamba: 'false'
+            arch: x86_64
     instructions: |
         {% if not self.installed.lower() in ["true", "y", "1"] -%}
         {{ self.install_dependencies() }}
