--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -13,37 +13,16 @@ concurrency:
     cancel-in-progress: true
 
 on:
+    # Regenerate workflows when supported recipe templates change on master.
     push:
         branches: [master]
         paths:
-        -   .github/workflows/bootstrap.yml
-        -   .github/workflows/create_workflows.py
-        -   neurodocker/**
-
-# Uses the cron schedule for github actions
-#
-# https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#scheduled-events
-#
-#         ┌───────────── minute (0 - 59)
-#         │ ┌───────────── hour (0 - 23)
-#         │ │   ┌───────────── day of the month (1 - 31)
-#         │ │   │    ┌───────────── month (1 - 12 or JAN-DEC)
-#         │ │   │    │ ┌───────────── day of the week (0 - 6 or SUN-SAT)
-#         │ │   │    │ │
-#         │ │   │    │ │
-#         │ │   │    │ │
-#         * *   *    * *
-
+        -   neurodocker/templates/*.yaml
+    # Runs weekly on Sunday at 00:00 UTC.
     schedule:
-    -   cron: 0 0 1,15 * *
-
-  # Allows you to run this workflow manually from the Actions tab
+    -   cron: '0 0 * * 0'
+    # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
-        inputs:
-            software_name:
-                description: software to test
-                required: true
-                default: all
 
 permissions:
     contents: write
@@ -56,6 +35,7 @@ jobs:
         -   uses: actions/checkout@v6
             with:
                 token: ${{ secrets.CI_FLOW }}
+                fetch-depth: 0
 
         -   name: Set up Python
             uses: actions/setup-python@v6
@@ -67,20 +47,45 @@ jobs:
 
         -   name: Create workflows
             run: |
-                software_name=${{ inputs.software_name }}
-                if [ -z "$software_name" ]; then
-                  software_name="all"
+                if [ "${{ github.event_name }}" = "push" ]; then
+                  echo "detecting changed recipe templates"
+                  changed_recipes=$(git diff --name-only "${{ github.event.before }}" "${{ github.sha }}" -- 'neurodocker/templates/*.yaml' \
+                    | sed -E 's#^neurodocker/templates/##; s#\.yaml$##' \
+                    | sort -u)
+                  if [ -z "$changed_recipes" ]; then
+                    echo "no recipe template changes detected"
+                    exit 0
+                  fi
                 fi
-                if [ "$software_name" = "all" ]; then
-                  echo "testing all software"
-                else
-                  echo "testing ${software_name}"
-                fi
+
                 git checkout -b test_docker_build
-                python .github/workflows/create_workflows.py --software_name ${software_name}
+
+                if [ "${{ github.event_name }}" = "push" ]; then
+                  echo "testing changed recipes:"
+                  echo "$changed_recipes"
+                  for recipe in $changed_recipes; do
+                    case "$recipe" in
+                      afni|ants|bids_validator|cat12|convert3d|dcm2niix|freesurfer|fsl|jq|matlabmcr|miniconda|mricron|mrtrix3|spm12)
+                        python .github/workflows/create_workflows.py --software_name "${recipe}"
+                        ;;
+                      *)
+                        echo "skipping unsupported recipe: ${recipe}"
+                        ;;
+                    esac
+                  done
+                else
+                  software_name="all"
+                  echo "testing all software"
+                  python .github/workflows/create_workflows.py --software_name "${software_name}"
+                fi
+
                 ls -l .github/workflows
                 git add .
+                if git diff --cached --quiet; then
+                  echo "no workflow updates to commit"
+                  exit 0
+                fi
                 git config --global user.email "no-reply@repronim.org"
                 git config --global user.name "Repronim neurodocker bot"
-                git commit -am "added new workflows"
+                git commit -m "added new workflows"
                 git push origin --force test_docker_build
