--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -20,7 +20,7 @@ on:
         -   neurodocker/templates/*.yaml
     # Runs weekly on Sunday at 00:00 UTC.
     schedule:
-    -   cron: '0 0 * * 0'
+    -   cron: 0 0 * * 0
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
